k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autos
  labels:
    name: autos
    tier: application
    project: autos
